Make use of some new java language features and fix some javadoc issues